tui-markdown/src/renderer/snapshots/tui_markdown__renderer__blockquote__tests__gfm_alerts__alert_preserves_nested_blockquote.snap
---
source: tui-markdown/src/renderer/blockquote.rs
expression: |-
  from_str(indoc!
  {"
                  > [!NOTE]
                  > Parent
                  >> Child
              "})
---
Text::from_iter([
    Line::from_iter([
        Span::from(">"),
        Span::from(" "),
        Span::from("ℹ\u{fe0f} Note").blue().bold(),
    ]).blue(),
    Line::from_iter([
        Span::from(">"),
        Span::from(" "),
        Span::from("Parent"),
    ]).blue(),
    Line::from_iter([
        Span::from(">"),
        Span::from(" "),
    ]).blue(),
    Line::from_iter([
        Span::from(">"),
        Span::from(">"),
        Span::from(" "),
        Span::from("Child"),
    ]).green(),
])
