tui-markdown/src/renderer/snapshots/tui_markdown__renderer__blockquote__tests__gfm_alerts__nested_blockquote_keeps_each_standard_prefix.snap
---
source: tui-markdown/src/renderer/blockquote.rs
expression: |-
  from_str(indoc!
  {"
                      > Parent
                      >> Child
                  "})
---
Text::from_iter([
    Line::from_iter([
        Span::from(">"),
        Span::from(" "),
        Span::from("Parent"),
    ]).green(),
    Line::from_iter([
        Span::from(">"),
        Span::from(" "),
    ]).green(),
    Line::from_iter([
        Span::from(">"),
        Span::from(">"),
        Span::from(" "),
        Span::from("Child"),
    ]).green(),
])
